# local-foundry

./: .gitignore  README.md  main.py  pyproject.toml  rush_lyrics_for_indexing.jsonl  rush_scholar.py  rush_scholar_demo.md
rush_index/: chroma.sqlite3
